--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=chatapp
+
+# Database source config
+spring.datasource.url=${DEVDB-URL}
+spring.datasource.username=${DEVDB-USERNAME}
+spring.datasource.password=${DEVDB-PASSWORD}
+
+logging.level.org.hibernate=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.cache=DEBUG
+logging.level.org.hibernate.stat=DEBUG
