--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=chatapp
 
+server.servlet.context-path=/chatapp
+
 # Database source config
 spring.datasource.url=${DEVDB-URL}
 spring.datasource.username=${DEVDB-USERNAME}
 spring.datasource.password=${DEVDB-PASSWORD}
 
-logging.level.org.hibernate=INFO
+logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.cache=DEBUG
 logging.level.org.hibernate.stat=DEBUG
+
+amazonProperties.endpointUrl=${S3-URL}
+amazonProperties.accessKey=${S3-ACCESS-KEY}
+amazonProperties.secretKey=${S3-SECRET-KEY}
+amazonProperties.bucketName=${S3-BUCKET-NAME}
