chore: add config to auto generate dll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ amazonProperties.endpointUrl=${S3-URL}
 amazonProperties.accessKey=${S3-ACCESS-KEY}
 amazonProperties.secretKey=${S3-SECRET-KEY}
 amazonProperties.bucketName=${S3-BUCKET-NAME}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
